@@ -91,3 +91,40 @@ class TestTransform(unittest.TestCase):
         self.assertEqual(yy, [xymap[x] for x in xx])
         self.assertEqual(ss, self.sigma)
 
+
+class TestFuncProperties(unittest.TestCase):
+    def setUp(self):
+        self.ftk = fityk.Fityk()
+        self.ftk.set_option_as_number("verbosity", -1)
+        self.ftk.execute("%f = Quadratic(~1, 2, ~3)")
+        self.ftk.execute("%g = Constant(7.5)")
+        self.ftk.execute("F = %f + %g")
+
+    def _check(self, expr, val, places=12):
+        expr_val = self.ftk.calculate_expr(expr)
+        self.assertAlmostEqual(expr_val, val, places=places)
+
+    def test_numarea(self):
+        # Integral of 1+2*x+3*x^2 = x+x^2+x^3| from 2 to 4 = 84-14 = 70
+        self._check("%f.numarea(2, 4, 1000)", 70, places=5)
+        self._check("%g.numarea(2, 4, 3)", 2*7.5)
+        self._check("F.numarea(2, 4, 300)", 70 + 2*7.5, places=4)
+
+    def test_findx(self):
+        self._check("%f.findx(0, 5, 6)", 1.0, places=12)
+        self._check("%f.findx(-1.5, 1.2, 6)", 1.0, places=12)
+        self.ftk.calculate_expr("%g.findx(-10, 10, 7.5)") # anything
+        self._check("F.findx(-1.5, 1.2, 13.5)", 1.0, places=12)
+        self.ftk.execute("Z = Constant(0.2)")
+        self._check("F.findx(-1.5, 1.2, 13.5)", 1.0-0.2, places=12)
+
+    def test_extremum(self):
+        self._check("%f.extremum(-10, 10)", -1.0/3, places=13)
+        self.ftk.calculate_expr("%g.extremum(-10, 10)") # anything
+        self._check("F.extremum(-10, 10)", -1.0/3, places=13)
+        self.ftk.execute("Z = Constant(0.2)")
+        self._check("F.extremum(-10, 10)", -1.0/3-0.2, places=12)
+
+if __name__ == '__main__':
+    unittest.main()
+
