@@ -1,5 +1,6 @@
 User-visible changes in version 1.3.1  (unreleased):
 * GUI: more options in the peak-top menu
+* added utilities F.findx() and F.extremum()
 
 User-visible changes in version 1.3.0  (2015-05-25):
 * support filenames with non-ascii characters
